[build-system]
requires = [
  "setuptools >= 61.0",
  "graphql-core>=3.1,<3.3",
  "graphql-relay>=3.1,<3.3",
]
build-backend = "setuptools.build_meta"


[project]
name = "graphene"
dynamic = ["version"]
dependencies = ["graphql-core>=3.1,<3.3", "graphql-relay>=3.1,<3.3"]
requires-python = ">=3.8"
authors = [{ name = "Syrus Akbary", email = "me@syrusakbary.com" }]
description = "GraphQL Framework for Python"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["api", "graphql", "protocol", "rest", "relay", "graphene"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.setuptools.dynamic]
version = { attr = "graphene.__version__" }

[project.optional-dependencies]
dev = ["ruff==0.5.0", "graphene[test]"]
test = [
  "tox",
  "pytest>=8,<9",
  "pytest-benchmark>=4,<5",
  "pytest-cov>=5,<6",
  "pytest-mock>=3,<4",
  "pytest-asyncio>=0.16,<2",
  "snapshottest>=0.6,<1",
  "coveralls>=3.3,<5",
]

[project.urls]
Homepage = "https://graphene-python.org/"
Repository = "https://github.com/graphql-python/graphene"
