[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "graphene"
version = "3.3.0"
authors = [ "Syrus Akbary <me@syrusakbary.com>" ]
description = "GraphQL Framework for Python"
readme = "README.md"
license = "MIT"
keywords = ["api", "graphql", "protocol", "rest", "relay", "graphene"]
homepage = "https://graphene-python.org/"
repository = "https://github.com/graphql-python/graphene"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = "^3.8"
graphql-core = ">=3.1,<3.3"
graphql-relay = ">=3.1,<3.3"

[tool.poetry.group.test.dependencies]
tox = "*"
pytest = ">=8,<9"
pytest-benchmark = ">=4,<5"
pytest-cov = ">=5,<6"
pytest-mock = ">=3,<4"
pytest-asyncio = ">=0.16,<2"
snapshottest = ">=0.6,<1"
coveralls = ">=3.3,<5"
